Alterações no dash

--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -1,6 +1,7 @@
 <fusioncharts
     [id]="id"
     [height]="height"
+    [width]="width"
     [type]="type"
     [dataFormat]="dataFormat"
     [dataSource]="dataSource"
