--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,24 @@
-<router-outlet></router-outlet>
+<mat-drawer-container class="menu-container" autosize>
+    <mat-drawer #drawer class="menu-sidenav" mode="side">
+        <mat-toolbar color="secondary">
+            <mat-toolbar-row>
+                <button type="button" mat-button>Criar Dashboard</button>
+            </mat-toolbar-row>
+            <mat-toolbar-row>
+                <button type="button" mat-button>Criar Datasource</button>
+            </mat-toolbar-row>   
+        </mat-toolbar>
+    </mat-drawer>
+    <div class="example-sidenav-content">
+        <mat-toolbar color="primary">
+            <mat-toolbar-row>
+                <mat-icon class="example-icon" (click)="drawer.toggle()">list</mat-icon>
+                <div class="title-app">
+                    <span>Dashboard - Dinâmico</span>
+                </div>
+            </mat-toolbar-row>
+        </mat-toolbar>
+              
+        <router-outlet></router-outlet>
+    </div>
+</mat-drawer-container>
