--- a/src/app/create-widget/create-widget.component.html
+++ b/src/app/create-widget/create-widget.component.html
@@ -1,35 +1,98 @@
-<h1>Tela de criação de grafico</h1>
-<app-chart #chart_template id="chart_template" width="100%" hegth="300px"
-            [optionGraph]="optionGraph"></app-chart>
-
-<mat-form-field class="filtro-chip-list">
-  <mat-chip-list #chipList>
-    <mat-chip *ngFor="let filtro of optionFilter" [selectable]="selectable"
-            [removable]="removable" (remove)="remove(filtro)" [color]="filtro.color">
-      {{filtro.name}}
-      <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-    </mat-chip>
-    <input placeholder="New filtro..." #textoFiltro (keyup)="verifList(textoFiltro.value)"
-          matInput [formControl]="myControl"
-          [matChipInputFor]="chipList"
-          [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-          [matChipInputAddOnBlur]="addOnBlur"
-          (matChipInputTokenEnd)="add($event)"
-          [matAutocomplete]="auto"/>
-  </mat-chip-list>
-</mat-form-field>
-<mat-autocomplete #auto="matAutocomplete">
-  <mat-option *ngFor="let option of options | filtroName: textoFiltro.value" (click)="selectOption(option, textoFiltro)" >
-    {{ option.name }}
-  </mat-option>
-</mat-autocomplete>
-
-<button mat-button (click)="addSerie()">Adicionar</button>
-
-<button mat-button (click)="executarGraph(chart_template)">Executar</button>
-
-<mat-selection-list>
-  <mat-list-item *ngFor="let op of optionGraph">
-    {{op.name}}
-  </mat-list-item>
-</mat-selection-list>
+<div class="page-main">
+  <div class="card bg-light mb-3">
+    <div class="card-header">
+      Criação de grafico
+    </div>
+    <div class="card-body">
+      <form [formGroup]="formCreateGraph">
+        <div class="row">
+          <div class="col">
+            <mat-form-field class="form-graph">
+              <input placeholder="Titulo do gráfico:" matInput [(ngModel)]="caption" formControlName="caption" />
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-8">
+            <mat-form-field class="form-graph">
+              <input placeholder="Altura:" matInput [(ngModel)]="height" formControlName="height" />
+            </mat-form-field>
+          </div>
+          <div class="col-4">
+            <mat-radio-group [(ngModel)]="columnLayout" formControlName="columnLayout" (change)="changeCol()">
+              <mat-radio-button value="1">Tamanho 1</mat-radio-button>
+              <mat-radio-button value="2">Tamanho 2</mat-radio-button>
+              <mat-radio-button value="3">Tamanho 3</mat-radio-button>
+            </mat-radio-group>
+          </div>
+        </div>
+        <div class="row">
+          <div class="{{colGraph}}">
+            <app-chart #chart_template id="chart_template" [optionArray]="optionGraph" width="100px" [height]="height"></app-chart>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-10">
+            <mat-form-field class="filtro-chip-list">
+              <mat-chip-list #chipList>
+                <mat-chip *ngFor="let filtro of optionFilter" [selectable]="selectable" [removable]="removable" (remove)="remove(filtro)"
+                  [color]="filtro.color">
+                  {{filtro.name}}
+                  <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                </mat-chip>
+                <input placeholder="New filtro..." #textoFiltro (keyup)="verifList($event, textoFiltro.value)" matInput [formControl]="chipControl"
+                  [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
+                  (matChipInputTokenEnd)="add($event)" [matAutocomplete]="auto" />
+              </mat-chip-list>
+            </mat-form-field>
+            <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selectOption($event, textoFiltro)">
+              <mat-option *ngFor="let option of options | filtroName: textoFiltro.value" [value]="option">
+                {{ option.name }}
+              </mat-option>
+            </mat-autocomplete>
+          </div>
+          <div class="col-2 button-row">
+            <button mat-mini-fab (click)="addSerie($event, chart_template)" color="basic">
+              <mat-icon aria-label="Adicionar">check</mat-icon>
+            </button>
+            <button mat-mini-fab (click)="changeSort($event, chart_template)">
+              <mat-icon aria-label="Mudar order">swap_vert</mat-icon>
+            </button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div formArrayName="items">
+            <mat-accordion>
+              <mat-expansion-panel *ngFor="let op of optionGraph.controls; let i=index;" hideToggle="true"
+                                    [formGroupName]="i">
+                <mat-expansion-panel-header>
+                  <mat-panel-title>
+                    {{op.value.tituloSerie}}
+                  </mat-panel-title>
+                  <mat-panel-description>
+                    {{op.value.unit_type}}
+                  </mat-panel-description>
+                  <mat-icon>mode_edit</mat-icon>
+                </mat-expansion-panel-header>
+                  <mat-form-field class="form-graph">
+                    <input placeholder="Titulo da serie:" matInput formControlName="tituloSerie"/>
+                  </mat-form-field>
+                  <mat-selection-list>
+                    <mat-list-option *ngFor="let detail of op.value.options">
+                      {{detail.com ? 'Com ' : 'Sem '}} {{detail.origin == 'SITE' ? 'o site: ' : ''}} {{detail.origin == 'NODE' ? 'o elemento: '
+                      : ''}} {{detail.origin == 'GROUP' ? 'o grupo: ' : ''}} {{detail.name}}
+                    </mat-list-option>
+                  </mat-selection-list>
+                  <mat-action-row>
+                    <button mat-button color="warn" (click)="removerSerie($event, i, chart_template)">Remover</button>
+                  </mat-action-row>
+              </mat-expansion-panel>
+            </mat-accordion>
+          </div>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
