--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,9 @@
             <button mat-icon-button>
                 <mat-icon>account_circle</mat-icon>
             </button>
+            <button mat-icon-button (click)="openDialog()">
+                <mat-icon>add</mat-icon>
+            </button>
         </div>
         <mat-sidenav-container fullscreen>
             <div layout-gt-sm="row" tdMediaToggle="gt-sm">
