--- a/src/app/create-widget/create-widget.component.css
+++ b/src/app/create-widget/create-widget.component.css
@@ -13,3 +13,11 @@
 .button-action-add {
     vertical-align: middle;
 }
+
+.col-btn-salvar{
+    margin-top: 0.4em;
+}
+
+.col-btn-salvar button {
+    float: right;
+}
