--- a/src/app/widget/widget.component.html
+++ b/src/app/widget/widget.component.html
@@ -1,20 +1,11 @@
-<!--<div class="card bg-light mb-3">
-    <div class="card-header">
-        {{caption}}
-    </div>
-    <div class="card-body">
-        <app-chart #chart_dash id="chart_dash"
-                  [optionGraph]="optionGraph" width="100px" [height]="height"></app-chart>
-    </div>
-</div>-->
 <mat-card class="card-box">
     <mat-card-header class="card-box-button">
-        <button mat-icon-button>
-            <mat-icon>edit</mat-icon>
-        </button>
-        <button mat-icon-button>
-            <mat-icon>delete</mat-icon>
-        </button>
+            <button mat-icon-button [routerLink]="['/widget/', id]">
+                <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-icon-button (click)="delete(widget_main)">
+                <mat-icon>delete</mat-icon>
+            </button>
     </mat-card-header>
-    <app-chart #chart_dash id="chart_dash" [caption]="caption" [optionGraph]="optionGraph" width="100px" [height]="height"></app-chart>
+    <app-chart #chart_dash id="chart_dash" [caption]="caption" [optionGraph]="optionGraph" [height]="height"></app-chart>
 </mat-card>
