--- a/src/theme-flex.scss
+++ b/src/theme-flex.scss
@@ -1,78 +1,40 @@
-/*
- * Copyright (C) 2016-2017 by Teradata Corporation. All rights reserved.
- * TERADATA CORPORATION CONFIDENTIAL AND TRADE SECRET
- */
+@import '~@angular/material/theming';
+@import './flex-var.scss';
+@include mat-core();
 
- @import '~@angular/material/theming';
- @import '~@covalent/core/theming/all-theme';
- // Plus imports for other components in your app.
- 
- // Include the base styles for Angular Material core. We include this here so that you only
- // have to load a single css file for Angular Material in your app.
- @include mat-core();
- 
- // Define the palettes for your theme using the Material Design palettes available in palette.scss
- // (imported above). For each palette, you can optionally specify a default, lighter, and darker
- // hue.
- $primary: mat-palette($mat-red, 700);
- $accent:  mat-palette($mat-blue, 800, A100, A400);
- 
- // The warn palette is optional (defaults to red).
- $warn:    mat-palette($mat-red, 600);
- 
- // Create the theme object (a Sass map containing all of the palettes).
- $theme: mat-light-theme($primary, $accent, $warn);
- 
- // Include theme styles for core and each component used in your app.
- // Alternatively, you can import and @include the theme mixins for each component
- // that you are using.
- @include angular-material-theme($theme);
- @include covalent-theme($theme);
- 
- // Active icon color in list nav
- mat-nav-list, mat-list {
-     [mat-list-item].active {
-         mat-icon[matListAvatar] {
-             background-color: mat-color($accent);
-             color: mat-color($accent, default-contrast);
-         }
-         mat-icon[matListIcon] {
-             color: mat-color($accent);
-         }
-     }
- }
- 
- /* ------------------------------------------------------------------------------- */
- $foreground: map-get($theme, foreground);
- $background: map-get($theme, background);
- 
- // Apply theme for this app
- 
- // NGX Charts
- [ngx-charts-axis-label] text {
-     fill: mat-color($foreground, secondary-text);
- }
- .tick text {
-     fill: mat-color($foreground, disabled);
- }
- .gridline-path {
-     &.gridline-path-horizontal,
-     &.gridline-path-vertical {
-         stroke: rgba(black, 0.06);
-     }
- }
- .legend-title-text {
-     color: mat-color($foreground, secondary-text);
- }
- mat-card-title{
-   &:hover {
-     cursor: grab;
-     cursor: -moz-grab;
-     cursor: -webkit-grab;
-   }
-   &:active {
-     cursor: grabbing;
-     cursor: -moz-grabbing;
-     cursor: -webkit-grabbing;
-   }
- }
+// Typography
+$custom-typography: mat-typography-config(
+  $font-family: Raleway,
+  $headline: mat-typography-level(24px, 48px, 400),
+  $body-1: mat-typography-level(16px, 24px, 400)
+);
+@include angular-material-typography($custom-typography);
+
+// Default colors
+$my-app-primary:  mat-palette($mat-flex-primary, 50, 100, 200);
+$my-app-accent:  mat-palette($mat-flex-accent, 50, 100, 200);
+
+$my-app-theme: mat-light-theme($my-app-primary, $my-app-accent);
+@include angular-material-theme($my-app-theme);
+
+// Dark theme
+$dark-primary: mat-palette($mat-blue-grey);
+$dark-accent:  mat-palette($mat-amber, A200, A100, A400);
+$dark-warn:    mat-palette($mat-deep-orange);
+
+$dark-theme:   mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
+
+.dark-theme {
+  @include angular-material-theme($dark-theme);
+}
+
+// Light theme
+$light-primary: mat-palette($mat-grey, 200, 500, 300);
+$light-accent: mat-palette($mat-brown, 200);
+$light-warn: mat-palette($mat-deep-orange, 200);
+
+$light-theme: mat-light-theme($light-primary, $light-accent, $light-warn);
+
+.light-theme {
+  @include angular-material-theme($light-theme)
+}
