Correção do autocomplete

--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -54,6 +54,12 @@
               </image-upload>
             </div>
           </div>
+          <div class="row div-field">
+            <div class="col-2"></div>
+            <div class="col-3">
+              <img [src]="company.logo"/>
+            </div>
+          </div>
           <mat-divider class="div-field"></mat-divider>
           <div class="row div-field">
             <div class="col col-btn-salvar">
