--- a/src/app/widget/widget.component.html
+++ b/src/app/widget/widget.component.html
@@ -1,6 +1,6 @@
 <mat-card class="card-box">
     <mat-card-header class="card-box-button">
-            <button mat-icon-button [routerLink]="['/widget/', id]">
+            <button mat-icon-button [routerLink]="['/widget/', id, 'dash', idDash]">
                 <mat-icon>edit</mat-icon>
             </button>
             <button mat-icon-button (click)="delete(widget_main)">
