--- a/src/flex-var.scss
+++ b/src/flex-var.scss
@@ -1,12 +1,12 @@
-$mat-flex-primary: ( 50: #3f83a3, 100: #4385a5,
- 200: #4c8baa,
- 300: #5a94b1,
- 400: #6ca0ba,
- 500: #81adc4,
- 600: #96bbce,
- 700: #abc9d8,
- 800: #bdd5e1,
- 900: #cee0e9,
+$mat-flex-primary: ( 50: #f65e01, 100: #f66106,
+ 200: #f66912,
+ 300: #f77525,
+ 400: #f8843d,
+ 500: #f99558,
+ 600: #faa774,
+ 700: #fbb990,
+ 800: #fcc8a8,
+ 900: #fdd6be,
 	contrast: (
 		50:  $light-primary-text,
 		100: $light-primary-text,
@@ -25,29 +25,29 @@ $mat-flex-primary: ( 50: #3f83a3, 100: #4385a5,
 	)
 );
 
-$mat-flex-accent: ( 50: #FBC02D, 100: #fbc131,
- 200: #fbc43b,
- 300: #fbc94b,
- 400: #fbcf5f,
- 500: #fcd675,
- 600: #fddd8c,
- 700: #fde4a3,
- 800: #fdeab7,
- 900: #feefc9,
+$mat-flex-accent: ( 50: #003399, 100: #05379b,
+ 200: #1241a0,
+ 300: #2550a8,
+ 400: #3d63b2,
+ 500: #5879bd,
+ 600: #7490c8,
+ 700: #90a6d3,
+ 800: #a8badd,
+ 900: #becbe6,
 	contrast: (
-		50:  $dark-primary-text,
-		100: $dark-primary-text,
-		200: $dark-primary-text,
-		300: $dark-primary-text,
-		400: $dark-primary-text,
-		500: $light-primary-text,
-		600: $light-primary-text,
-		700: $light-primary-text,
-		800: $light-primary-text,
-		900: $light-primary-text,
-		A100: $light-primary-text,
-		A200: $dark-primary-text,
-		A400: $dark-primary-text,
-		A700: $dark-primary-text,
+		50:  $light-primary-text,
+		100: $light-primary-text,
+		200: $light-primary-text,
+		300: $light-primary-text,
+		400: $light-primary-text,
+		500: $dark-primary-text,
+		600: $dark-primary-text,
+		700: $dark-primary-text,
+		800: $dark-primary-text,
+		900: $dark-primary-text,
+		A100: $dark-primary-text,
+		A200: $light-primary-text,
+		A400: $light-primary-text,
+		A700: $light-primary-text,
 	)
 );
