--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,36 @@
 <td-layout>
-    <td-navigation-drawer flex [sidenavTitle]="title" logo="assets:covalent" name="Firstname Lastname" email="firstname.lastname@company.com">
+    <td-navigation-drawer>
+        <div class="mat-toolbar">
+            <div class="div-avatar-profile">
+                <img src="../assets/ale.jpg" class="avatar-profile"/>
+                <mat-divider class="space-element"></mat-divider>
+                <div>
+                    <span class="label-font">Alessandro Ericsson</span>
+                    <span class="label-font font-small">alessandro.ericsson@flexvision.com.br</span>
+                </div>
+                <div class="space-element"></div>
+            </div>
+        </div>
         <mat-nav-list>
-            <a mat-list-item>
-                <mat-icon>check</mat-icon>Criar Dashboard</a>
-            <a mat-list-item>
-                <mat-icon>check</mat-icon>Criar Datasource</a>
+            <a mat-list-item *ngFor="let dash of dashboards" [routerLink]="['/board/', dash.id]">
+                <mat-icon>dashboard</mat-icon>{{dash.titleDash}}
+            </a>
+            <mat-divider></mat-divider>
+            <a mat-list-item  [routerLink]="['/company/']">
+                <mat-icon>settings</mat-icon>Configurações
+            </a>
         </mat-nav-list>
     </td-navigation-drawer>
     <td-layout-nav [toolbarTitle]="title">
         <button mat-icon-button td-menu-button tdLayoutToggle>
             <mat-icon>menu</mat-icon>
         </button>
-        <div td-toolbar-content layout="row" layout-align="start center" flex>
-            <span flex></span>
-            <button mat-icon-button>
-                <mat-icon>notifications</mat-icon>
-            </button>
-            <button mat-icon-button>
-                <mat-icon>account_circle</mat-icon>
-            </button>
-            <button mat-icon-button (click)="openDialog()">
+        <div td-toolbar-content class="toolbar-top">
+            <button mat-icon-button (click)="openDialog()" matTooltip="Criar Dashboard">
                 <mat-icon>add</mat-icon>
             </button>
+            
+            <img [src]="company.logo" class="logo"/>
         </div>
         <mat-sidenav-container fullscreen>
             <div layout-gt-sm="row" tdMediaToggle="gt-sm">
@@ -31,7 +40,7 @@
     </td-layout-nav>
     <td-layout-footer>
         <div layout="row" layout-align="start center">
-            <span class="mat-caption">Copyright &copy; 2018 Graxa. All rights reserved</span>
+            <span class="mat-caption">Copyright &copy; 2018 Flexvision. All rights reserved</span>
         </div>
     </td-layout-footer>
 </td-layout>
