--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row board-page">
     <div class="container-board">
         <div class="container-fluid">
             <div class="row" *ngFor="let row of dashboard.rowsView; let row_index = index">
